Attribute capture causes flickering in render (Geometrynodes) #92652

Closed
opened 2021-10-30 17:30:53 +02:00 by Cartesian Caramel · 10 comments

System Information
Operating system: Windows-10-10.0.19043-SP0 64 Bits
Graphics card: GeForce GTX 1060 3GB/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 456.71

Blender Version
Broken: version: 3.0.0 Beta, branch: master, commit date: 2021-10-27 22:07, hash: b838eaf2b9
Worked: (newest version of Blender that worked as expected)

Short description of error
When 2 attribute capture nodes are present flickering is caused. The flickering will change when any value is changed in the setup, or when the frame is changed. Flickering.PNG It seems realized instances, combined with the join geometry node, help cause this.

Exact steps for others to reproduce the error
Please refer the included .blend file.
[Based on the default startup or an attached .blend file (as simple as possible)]
Attribute capture render flickering.blend

**System Information** Operating system: Windows-10-10.0.19043-SP0 64 Bits Graphics card: GeForce GTX 1060 3GB/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 456.71 **Blender Version** Broken: version: 3.0.0 Beta, branch: master, commit date: 2021-10-27 22:07, hash: `b838eaf2b9` Worked: (newest version of Blender that worked as expected) **Short description of error** When 2 attribute capture nodes are present flickering is caused. The flickering will change when any value is changed in the setup, or when the frame is changed. ![Flickering.PNG](https://archive.blender.org/developer/F11622682/Flickering.PNG) It seems realized instances, combined with the join geometry node, help cause this. **Exact steps for others to reproduce the error** Please refer the included .blend file. [Based on the default startup or an attached .blend file (as simple as possible)] [Attribute capture render flickering.blend](https://archive.blender.org/developer/F11622705/Attribute_capture_render_flickering.blend)

Added subscriber: @Bbbn19

Added subscriber: @Bbbn19
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Added subscriber: @PratikPB2123

Added subscriber: @PratikPB2123
Member

Added subscriber: @HooglyBoogly

Added subscriber: @HooglyBoogly
Member

Thanks for the report. I have a feeling this might be the same issue as #91986.

Thanks for the report. I have a feeling this might be the same issue as #91986.
Member

Added subscriber: @JacquesLucke

Added subscriber: @JacquesLucke
Member

It's not the same. Here we don't have Cycles and instances.

It's not the same. Here we don't have Cycles and instances.
Member

This seems to be caused by differently ordered attributes on splines.

See how the first spline has a different order (P2565):

0: 
  <Capture Attribute.006>
  <Capture Attribute.005>
1: 
  <Capture Attribute.005>
  <Capture Attribute.006>
2: 
  <Capture Attribute.005>
  <Capture Attribute.006>
3: 
  <Capture Attribute.005>
  <Capture Attribute.006>
4: 
  <Capture Attribute.005>
  <Capture Attribute.006>

Btw, the issue can also be seen in the spreadsheet, not only during rendering.

This seems to be caused by differently ordered attributes on splines. See how the first spline has a different order ([P2565](https://archive.blender.org/developer/P2565.txt)): ``` 0: <Capture Attribute.006> <Capture Attribute.005> 1: <Capture Attribute.005> <Capture Attribute.006> 2: <Capture Attribute.005> <Capture Attribute.006> 3: <Capture Attribute.005> <Capture Attribute.006> 4: <Capture Attribute.005> <Capture Attribute.006> ``` Btw, the issue can also be seen in the spreadsheet, not only during rendering.
Hans Goudey self-assigned this 2021-11-02 19:56:44 +01:00

This issue was referenced by 18392cef17

This issue was referenced by 18392cef17ddb40857fdb2462d8bad50f389029b
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#92652
No description provided.